docs/0.19/_sources/api/gammapy.modeling.models.LinearTemporalModel.rst.txt
LinearTemporalModel
===================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: LinearTemporalModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~LinearTemporalModel.alpha
      ~LinearTemporalModel.beta
      ~LinearTemporalModel.covariance
      ~LinearTemporalModel.default_parameters
      ~LinearTemporalModel.frozen
      ~LinearTemporalModel.parameters
      ~LinearTemporalModel.t_ref
      ~LinearTemporalModel.tag
      ~LinearTemporalModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~LinearTemporalModel.__call__
      ~LinearTemporalModel.copy
      ~LinearTemporalModel.evaluate
      ~LinearTemporalModel.freeze
      ~LinearTemporalModel.from_dict
      ~LinearTemporalModel.from_parameters
      ~LinearTemporalModel.integral
      ~LinearTemporalModel.plot
      ~LinearTemporalModel.reassign
      ~LinearTemporalModel.sample_time
      ~LinearTemporalModel.time_sum
      ~LinearTemporalModel.to_dict
      ~LinearTemporalModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: beta
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: frozen
   .. autoattribute:: parameters
   .. autoattribute:: t_ref
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: evaluate
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: plot
   .. automethod:: reassign
   .. automethod:: sample_time
   .. automethod:: time_sum
   .. automethod:: to_dict
   .. automethod:: unfreeze
